--- a/retro-calculator/Base.lproj/LaunchScreen.storyboard
+++ b/retro-calculator/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,46 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="bZP-Nf-2It">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="VGq-uo-be6">
+                                <rect key="frame" x="128" y="37" width="345" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="345" id="2YG-yE-tTE"/>
+                                    <constraint firstAttribute="height" constant="56" id="V3W-P5-3bP"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="K3Y-NL-dg3">
+                                <rect key="frame" x="0.0" y="472" width="600" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="f0k-XK-7Ri"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="HBo-X3-HFJ">
+                                <rect key="frame" x="180" y="140" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="ChG-jS-VuC"/>
+                                    <constraint firstAttribute="height" constant="128" id="It0-Nl-1kJ"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="bZP-Nf-2It" secondAttribute="trailing" id="MkG-o9-G9X"/>
+                            <constraint firstItem="VGq-uo-be6" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RtD-VD-Vgj"/>
+                            <constraint firstItem="K3Y-NL-dg3" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="SXd-rp-WJG"/>
+                            <constraint firstItem="HBo-X3-HFJ" firstAttribute="top" secondItem="VGq-uo-be6" secondAttribute="bottom" constant="47" id="UFF-BO-XOR"/>
+                            <constraint firstItem="HBo-X3-HFJ" firstAttribute="centerX" secondItem="VGq-uo-be6" secondAttribute="centerX" id="VBr-Hi-Gau"/>
+                            <constraint firstItem="bZP-Nf-2It" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Wsu-cu-eqE"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="bZP-Nf-2It" secondAttribute="bottom" id="YcK-fj-Oh5"/>
+                            <constraint firstItem="VGq-uo-be6" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="17" id="ikF-KA-Va8"/>
+                            <constraint firstAttribute="trailing" secondItem="K3Y-NL-dg3" secondAttribute="trailing" id="lzt-NV-68V"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="K3Y-NL-dg3" secondAttribute="bottom" id="qnT-Xv-w84"/>
+                            <constraint firstItem="bZP-Nf-2It" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="sy8-Gq-bAZ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +62,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
